--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+ HEAD
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -205,3 +206,8 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+node_modules
+.next
+.env.local
+d219ceb (Finalize Next.js frontend and remove old planning files)
