--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,26 @@
+# Python
 __pycache__/
-NUL
+*.pyc
+*.pyo
+*.pyd
+*.db
+*.sqlite3
+
+# Node / Next.js
+node_modules/
+.next/
+out/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# OS / Editor
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
