--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "start-local": "cross-env NEXT_PUBLIC_API_URL=http://127.0.0.1:8000 next dev -p 3000",
+    "start-prod": "cross-env NEXT_PUBLIC_API_URL=https://global-civic-ai-backend.onrender.com next start -p 3000"
   },
   "dependencies": {
     "next": "^16.1.6",
@@ -23,6 +25,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "cross-env": "^7.0.3"
   }
 }
