--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 fastapi
 uvicorn
-python-jose[cryptography]
-bcrypt
-python-multipart
-python-dotenv
+sqlalchemy
+alembic
+fastapi-jwt-auth
+pydantic
