--- a/alembic.ini
+++ b/alembic.ini
@@ -2,7 +2,7 @@
 script_location = alembic
 
 # Local dev: SQLite
-sqlalchemy.url = sqlite:///./test.db
+sqlalchemy.url = ${DATABASE_URL}
 # For Render: set DATABASE_URL in env and override this
 
 [loggers]
