--- a/.gitignore
+++ b/.gitignore
@@ -6,25 +6,32 @@ __pycache__/
 *.db
 *.sqlite3
 
-# Node / Next.js
-node_modules/
-.next/
-out/
+# Alembic / Migrations
+alembic/versions/*.pyc
+alembic/versions/__pycache__/
+
+# Node / Frontend
+frontend/node_modules/
+frontend/.next/
+frontend/out/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Environment
+# Environment files
 .env
 .env.local
 .env.*.local
+frontend/.env.production
 
-# OS / Editor
+# Scripts / Temp
+run_backend.sh
+start.bat
+*.log
+
+# OS / Editors
 .DS_Store
 Thumbs.db
 .vscode/
 .idea/
 NUL
-node_modules/
-__pycache__/
-*.pyc
